[gd_scene load_steps=3 format=2]

[ext_resource path="res://traps/fireball.gd" type="Script" id=1]
[ext_resource path="res://traps/fire_trap_wall.gltf" type="PackedScene" id=2]

[node name="Fireball" type="Spatial"]
script = ExtResource( 1 )

[node name="fire_trap_wall" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0.124 )

[node name="SpawnPoint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.362716 )

[node name="DelayTimer" type="Timer" parent="."]

[node name="StartDelay" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="timeout" from="StartDelay" to="." method="_on_start_delay_timeout"]
